# bebop-next

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Package.resolved  Package.swift  README.md  VERSION
bebop/: CMakeLists.txt
bebop/include/: bebop.h  bebop_wire.h
bebop/schemas/bebop/: any.bop  decorators.bop  descriptor.bop  empty.bop  json.bop  plugin.bop  rpc.bop
bebop/src/: bebop.c  bebop_arena.c  bebop_descriptor.c  bebop_emit.c  bebop_macro.c  bebop_parser.c  bebop_plugin.c  bebop_result.c  bebop_scanner.c  bebop_schema.c  bebop_sema.c  bebop_str.c  bebop_tables.h  bebop_utils.c  bebop_validate.c  bebop_wire.c
bebopc/: CMakeLists.txt
bebopc/src/: bebopc.c  bebopc.h  bebopc_diag.c  bebopc_diag.h  bebopc_dir.c  bebopc_dir.h  bebopc_error.c  bebopc_error.h  bebopc_glob.c  bebopc_glob.h  bebopc_log.c  bebopc_log.h  bebopc_utils.c  bebopc_utils.h  main.c
bebopc/src/cli/: bebopc_cli.c  bebopc_cli.h  bebopc_cli_completion.c  bebopc_cli_completion.h  bebopc_cli_defs.h  bebopc_compile.c  bebopc_compile.h  bebopc_config.c  bebopc_config.h  bebopc_runner.c  bebopc_runner.h
bebopc/src/watcher/: bebop_fsw.c  bebop_fsw.h  bebop_fsw_darwin.c  bebop_fsw_internal.h  bebop_fsw_linux.c  bebop_fsw_windows.c
beboplsp/: CMakeLists.txt
beboplsp/include/: beboplsp.h
beboplsp/src/: beboplsp.cpp  server.cpp  server.hpp  workspace.cpp  workspace.hpp
lab/benchmark/c/: .gitignore  CMakeLists.txt  README.md  benchmark_report.md  benchmark_results_st_2.json  generate_report.py
lab/benchmark/c/include/: bench_harness.h
lab/benchmark/c/schemas/: benchmark.bop  benchmark.proto
lab/benchmark/c/src/: bench_bebop.cpp  bench_msgpack.cpp  bench_protobuf.cpp  bench_simdjson.cpp  dump_golden.cpp  encode_helpers.cpp  encode_helpers.h  harness.cpp  main.cpp  test_data.c  wire_sizes.cpp
plugins/rust/: CLAUDE.md  CMakeLists.txt  Cargo.toml  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  generate.sh  research.md  test.sh
plugins/rust/benchmarks/: Cargo.toml  README.md  generate.sh
plugins/rust/benchmarks/benches/: criterion.rs
plugins/rust/benchmarks/src/: benchmark_types.rs  lib.rs
plugins/rust/benchmarks/tests/: golden.rs
plugins/rust/docs/: SPEC_COMPLIANCE.md
plugins/rust/docs/features/: FD-001_SERVICE_GENERATION.md  FD-002_DEPRECATED_FIELD_HANDLING.md  FD-008_OOM_HANDLING.md  FD-009_REFLECTION_METADATA.md  FD-010_ZERO_COPY_BULK_ARRAYS.md  FD-022_CROSS_LANGUAGE_BENCHMARKS.md  FD-023_ZERO_COPY_SCALAR_ARRAY_DECODE.md  FD-024_PLUGIN_PARAMETER_SUPPORT.md  FD-025_FORWARD_COMPAT_MESSAGE_SEMANTICS.md  FD-026_OPTIONAL_UUID_HALF_FEATURES.md  FD-027_MESSAGE_BUILDER_METHODS.md  FD-028_MAP_KEY_ACCESSOR_HELPERS.md  FD-029_DISPLAY_FOR_ENUMS_AND_FLAGS.md  FD-030_DECODE_ERROR_FIELD_CONTEXT.md  FD-031_DEPRECATED_ATTRIBUTE_EMISSION.md  FD-032_SERDE_ROUNDTRIP_TEST_COVERAGE.md  FD-033_COMPILER_DECORATOR_FQN.md  FD-034_CONSISTENT_BYTE_SERDE_IN_COLLECTIONS.md  FEATURE_INDEX.md  TEMPLATE.md
plugins/rust/integration-tests/: Cargo.toml  generate.sh
plugins/rust/integration-tests/schemas/: collision_types.bop  no_std_types.bop  test_types.bop
plugins/rust/integration-tests/src/: collision_types.rs  lib.rs  no_std_types.rs  test_types.rs
plugins/rust/integration-tests/tests/: ergonomic_wishlist.rs  integration.rs  no_std_integration.rs
plugins/rust/runtime/: Cargo.toml
plugins/rust/runtime/src/: bytes.rs  error.rs  lib.rs  reader.rs  serde_cow_bytes.rs  temporal.rs  traits.rs  wire_size.rs  writer.rs
plugins/rust/src/: error.rs  main.rs
plugins/rust/src/descriptor/: decorator.rs  definition.rs  field.rs  literal.rs  mod.rs  schema.rs  source_info.rs  type_desc.rs  types.rs
plugins/rust/src/generator/: field_codegen.rs  field_codegen_tests.rs  gen_const.rs  gen_enum.rs  gen_message.rs  gen_service.rs  gen_struct.rs  gen_union.rs  mod.rs  naming.rs  schema_analysis.rs  type_mapper.rs
plugins/rust/src/plugin/: request.rs  response.rs
plugins/rust/src/wire/: mod.rs  reader.rs  writer.rs
plugins/rust/tests/: e2e.rs
plugins/swift/: CMakeLists.txt  README.md  generate.sh  research.md
plugins/swift/Sources/BebopBuildToolPlugin/: Plugin.swift
plugins/swift/Sources/BebopCommandPlugin/: FormatPlugin.swift
plugins/swift/Sources/BebopPlugin/: DescriptorCompat.swift
plugins/swift/Sources/CBFloat16/: CBFloat16.c
plugins/swift/Sources/SwiftBebop/: BebopAny.swift  BebopEmpty.swift  BebopError.swift  BebopReader.swift  BebopRecord.swift  BebopScalar.swift  BebopTimestamp.swift  BebopUUID.swift  BebopWriter.swift  InlineArrayConformances.swift  Reflection.swift  json.bb.swift
plugins/swift/Sources/SwiftBebopFoundation/: BFloat16+CGFloat.swift  BebopTimestamp+Foundation.swift  (+2 more)
tests/: CMakeLists.txt  test_arena.c  test_bebop_fsw.c  test_bebop_rt.c  test_bebopc_cli.c  test_bebopc_config.c  test_bebopc_dir.c  test_bebopc_glob.c  test_bebopc_log.c  test_bebopc_runner.c  test_common.h  test_context.c  test_descriptor.c  test_emit.c  test_hash.c  test_json_wire.c  test_macro.c  test_map.c  test_parser.c  test_plugin.c  test_reflection.c  test_resolve.c  test_scanner.c  test_service.c  test_str.c
tests/fixtures/: bebop.json  bebop.yml
tests/fixtures/should_fail/: dec_ambig_user.bop  enum_zero.bop  invalid_map_keys.bop  invalid_syntax.bop  invalid_union_reference.bop  multiple_errors.bop  nested_union.bop  package_after_def.bop  package_after_import.bop  rpc.bop  union_ref_union.bop
tests/fixtures/valid/: album.bop  array_of_strings.bop  basic_arrays.bop  basic_types.bop  bitflags.bop  codegen_all.bop  codegen_base.bop  const.bop  dec_ambig_a.bop  dec_ambig_b.bop  dec_app.bop  dec_qualified.bop  dec_validate_export.bop  dec_validators.bop  document.bop  documentation.bop  enum.bop  enum_size.bop  fixed_arrays.bop  imports.bop  jazz.bop  lab.bop  map_types.bop  message.bop  msgpack_comparison.bop  nested.bop  nested_message.bop  package.bop  pkg_app.bop  pkg_import_nested.bop  pkg_nested.bop  pkg_types.bop  reflection.bop  request.bop  struct.bop  toposort.bop  tree.bop  union.bop  union_perf_a.bop  union_perf_b.bop  (+3 more)
(+208 files in other folders)
