[package]
name = "bebopc-gen-rust"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["runtime", "integration-tests", "benchmarks"]

[dependencies]
bebop-runtime = { path = "runtime" }

[[bin]]
name = "bebopc-gen-rust"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"

[lints.rust]
unexpected_cfgs = "allow" # TODO the generated code needs to do this inline, but it doesn't seem to be working...
