[package]
name = "bebop-rust-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bebop-runtime = { path = "../runtime", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
