[package]
name = "bebop-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["std"]
std = ["alloc", "bebop-runtime/std"]
alloc = ["bebop-runtime/alloc"]
alloc-map = ["alloc", "bebop-runtime/alloc-map"]

[dependencies]
bebop-runtime = { path = "../runtime", default-features = false }
