[package]
name = "bebop-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["std", "serde"]
std = ["bebop-runtime/std"]
serde = []

[dependencies]
bebop-runtime = { path = "../runtime", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
