[package]
name = "bebop-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime library for Bebop-generated Rust code"
publish = false

[features]
default = ["std"]
std = ["half/std"]

[dependencies]
half = { version = "2.7", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.15" }
uuid = { version = "1", default-features = false }
