[package]
name = "bebop-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime library for Bebop-generated Rust code"
publish = false

[features]
default = ["std"]
std = ["half/std", "simdutf8/std"]
chrono = ["dep:chrono"]
serde = ["dep:serde", "dep:serde_bytes", "half/serde", "uuid/serde", "hashbrown/serde"]

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
half = { version = "2.7", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.15" }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
simdutf8 = { version = "0.1", default-features = false, features = ["aarch64_neon"] }
uuid = { version = "1", default-features = false }
