[package]
name = "bebop-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime library for Bebop-generated Rust code"
publish = false

[features]
default = ["std", "uuid", "half"]
std = ["half?/std", "simdutf8/std"]
chrono = ["dep:chrono"]
half = ["dep:half"]
uuid = ["dep:uuid"]
serde = ["dep:serde", "dep:serde_bytes", "half?/serde", "uuid?/serde", "hashbrown/serde"]

[dependencies]
chrono = { version = "0.4.44", default-features = false, optional = true }
half = { version = "2.7.1", default-features = false, features = ["alloc"], optional = true }
hashbrown = { version = "0.16.1" }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11.19", default-features = false, features = ["alloc"], optional = true }
simdutf8 = { version = "0.1.5", default-features = false }
uuid = { version = "1.22.0", default-features = false, optional = true }
